--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,4 @@
 <div class="navbar">
-  <span class="content">
-    <h1><a href="/">DBrown</a></h1>
-    <ul>
-      <li><a href="/posts">Posts</a></li>
-      <li><a href="/projects">Projects</a></li>
-    </ul>
-  </span>
+    <a href="/"><h1>dbrown</h1></a>
 </div>
 
