Basic CSS Update

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -129,6 +129,10 @@ body {
         display: block;
     }
 
+    h3 {
+        margin-top: 0.8em;
+    }
+
     .preview_image {
         display: block;
         height: 15em;
