--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -184,7 +184,7 @@ a {
             text-align: justify;
         }
 
-        h2 {
+        h2, h1{
             padding-bottom: 1.5rem;
         }
 
