--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="icon" type="image/png" href="/favicon.png">
-    <meta charset="UTF-8">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-</head>
-<body>
-	{% include navbar.html %}
-    <div class="main_content">
-        {{ content }}
-    </div>
-</body>
+  <head>
+    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta charset="UTF-8" />
+    <title>
+      {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
+    </title>
+  </head>
+  <body>
+    {% include navbar.html %}
+    <div class="main_content">{{ content }}</div>
+    {% include footer.html %}
+  </body>
 </html>
