--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
   <div class="content">
     <span>&copy; 2023, Darcy Brown</span>
-    <span id="highlight">🏳️‍🌈</span>
+    <span id="highlight"></span>
   </div>
 </div>
