--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {% include google-analytics.html %}
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta charset="UTF-8" />
