--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       {% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}
     </title>
